design: Add important external packages and classes

--- a/Documentation/Entwurf/entwurf.tex
+++ b/Documentation/Entwurf/entwurf.tex
@@ -54,6 +54,86 @@
 
 \section{Klassenbeschreibungen}
 
+\subsection{Paket \texttt{javax.swing} (Paket aus der Standardbibliothek)}
+
+Stellt Komponenten für das Erstellen einer GUI bereit.
+
+\subsubsection{Klasse \texttt{JFrame}}
+
+Ein grundlegendes Gerüst, welchem andere Swing-Komponenten hinzugefügt werden können.
+
+\subsubsection{Klasse \texttt{JMenuBar}}
+
+Eine Menüleiste, welche Menüs beinhaltet.
+
+\subsubsection{Klasse \texttt{JMenu}}
+
+Ein Menü, welches man einer Menüleiste hinzufügen kann.
+
+\subsubsection{Klasse \texttt{JMenuItem}}
+
+Ein Menüeintrag, welchen man einem Menü hinzufügen kann.
+
+\subsubsection{Klasse \texttt{JToolBar}}
+
+Eine Schnellzugriffsleiste.
+
+\subsubsection{Klasse \texttt{JButton}}
+
+Ein Schaltfläche die man betätigen kann.
+
+\subsubsection{Klasse \texttt{JPanel}}
+
+Ein generischer Container, dem man andere Swing-Komponenten hinzufügen kann.
+
+\subsubsection{Klasse \texttt{JTextField}}
+
+Ein Textfeld das sowohl für Eingaben, als auch Ausgaben verwendet werden kann.
+
+\subsection{Paket \texttt{java.util} (Paket der Standardbibliothek)}
+
+Eine Sammlung von nützlichen Hilfsklassen.
+
+\subsubsection{Klasse \texttt{ListResourceBundle}}
+
+Eine Liste an Resourcen für die aktuelle Sprachumgebung.
+
+\subsubsection{Interface \texttt{Observer}}
+
+Kann von Klassen implementiert werden, wenn diese über Änderungen in anderen Objekten informiert werden wollen.
+
+\subsubsection{Klasse \texttt{Observable}}
+
+Eine abstrakte Klasse die ein observierbares Objekt repräsentiert. Beinhaltet eine Liste mit entsprechenden Beobachtern.
+
+\subsection{Paket \texttt{org.apache.batik.swing} (Externes Paket)}
+
+Beinhaltet eine gesonderte Leinwand, mit der es möglich ist Bilder im SVG-Format anzuzeigen und zu navigieren.
+
+\subsection{Paket \texttt{org.fife.ui.rsyntaxtextarea} (Externes Paket)}
+
+Beinhaltet ein Textfeld, welches zusätzliche Funktionen wie z.B. Code-Faltung (das automatische Umbrechen und Einrücken von Text) unterstützt.
+
+\subsubsection{Klasse \texttt{RSyntaxTextArea}}
+
+Das oben genannte Textfeld.
+
+\subsection{Paket \texttt{guru.nidi.graphviz.model} (Externes Paket)}
+
+Beinhaltet alle Bestandteile eines Graphen, sowie komplette Graphen.
+
+\subsubsection{Klasse \texttt{Graph}}
+
+Die Repräsentation eines Graphen, mit seinen Eigenschaften (z.B. gerichtet/ungerichtet), sowie dessen Bestandteilen.
+
+\subsection{Paket \texttt{guru.nidi.graphviz.engine} (Externes Paket)}
+
+Beinhaltet die Generierung verschiedener Darstellungsformate aus der internen Repräsentation eines Graphen. Sowie die Schnittstellen zu verschiedenen Sprachanbindungen anbieten.
+
+\subsubsection{Klasse \texttt{Graphviz}}
+
+Generiert aus einem gegebenen Graphen und einem Rasterizer eine Darstellung im gewünschten Format.
+
 \subsection{Paket \texttt{edu.kit.ipd.pp.viper.view}}
 
 % TODO?: Weitere Unterteilung Visualisierungs-Paket benötigt womöglich eigene Beschreibung
