design: Fix TODO line according to moving visualisation to model

--- a/Documentation/Entwurf/entwurf.tex
+++ b/Documentation/Entwurf/entwurf.tex
@@ -561,7 +561,7 @@ Führt das beschriebene Kommando aus.
 \subsection{Paket \texttt{edu.kit.ipd.pp.viper.model}}
 Repräsentation der Model-Komponente im Kontext des Model-View-Controller Architekturstils. Dies umfasst die internen Datenstrukturen wie beispielsweise den Interpreter, den Parser oder den abstrakten Syntaxbaum. Kommandos aus der Controller-Komponente, welche durch die View-Komponente ausgelöst werden, erzeugen Änderungen in der Model-Komponente wie beispielsweise das Voranschreiten der Interpretation.
 
-% TODO?: Weitere Unterteilung in Pakete für AST, Interpreter und Parser benötigen womöglich eigene Beschreibungen
+% TODO?: Weitere Unterteilung in Pakete für AST, Interpreter, Parser und Visualisierung benötigen womöglich eigene Beschreibungen
 
 \section{Sequenzdiagramme}
 
