design: Add view.visualisation subpackage

--- a/Documentation/Entwurf/entwurf.tex
+++ b/Documentation/Entwurf/entwurf.tex
@@ -351,6 +351,30 @@ Exception-Klasse für den Versuch, eine nicht-unterstützte Sprache im LanguageM
 \end{itemize}
 Gibt den Fehlertext der Exception als lokalisierten (an die gesetzte Sprache angepassten) String zurück. Die gewählte Sprache des Fehlertexts entspricht der Sprache vor dem versuchten Wechsel, der die Exception ausgelöst hat.
 
+\subsection{Paket \texttt{edu.kit.ipd.pp.viper.view.visualisation}}
+
+Beinhaltet Klassen, die für die Visualisierung des aktuellen Interpreter-Zustands zuständig sind.
+
+\subsubsection{Klasse \texttt{GraphvizActivationRecordVisitor}}
+
+TODO
+
+\textbf{\texttt{public GraphvizActivationRecordVisitor(root: ActivationRecord)}}\\
+\begin{itemize}[noitemsep]
+	\item[-] \texttt{root}: Wurzel
+\end{itemize}
+TODO
+
+\subsubsection{Klasse \texttt{LatexActivationRecordVisitor}}
+
+TODO
+
+\textbf{\texttt{public LatexActivationRecordVisitor(root: ActivationRecord)}}\\
+\begin{itemize}[noitemsep]
+	\item[-] \texttt{root}: Wurzel
+\end{itemize}
+TODO
+
 \subsection{Paket \texttt{edu.kit.ipd.pp.viper.controller}}
 
 Repräsentation der Controller-Komponente in Kontext des Model-View-Controller Architekturstils. Umfasst Kommandos zur Kapselung von Interaktionen zwischen der View-Komponente und der Model-Komponente.
